5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4414/executions/1798_2569.log
== SUBMITION (2019-06-12 11:37:38) 
-- CODE:
from  math import*
from numpy import*
x = array(eval(input("Valores: ")))
n = size(x)    
m = sum(x/n)
s = 0
for i in range(n):
    s =  s + (x[i] - m)**2
d = ((s / (n-1))**0.5)
print(round(d,3))
-- EXECUTION TIME:
1.09627
-- TEST CASE 1:
---- input:
[-4,250,-1,30,12]
---- correct output:
108.498
---- user output:
108.498
-- TEST CASE 2:
---- input:
[12.5,25.2,50.39,47.3,0.9]
---- correct output:
21.526
---- user output:
Valores: 21.526
-- TEST CASE 3:
---- input:
[1.5,1.9,1.2,1.3,1.4,1.1,1.75]

---- correct output:
0.29
---- user output:
Valores: 0.29
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 11:38:18) 
-- CODE:
from  math import*
from numpy import*
x = array(eval(input("Valores: ")))
n = size(x)    
m = sum(x/n)
s = 0
for i in range(n):
    s =  s + (x[i] - m)**2
		d = ((s / (n-1))**0.5)
print(round(d,3))
-- EXECUTION TIME:
0.504372
-- ERROR:
  File "/home/codebench/codes/1798/2569/main.py", line 9
    d = ((s / (n-1))**0.5)
                         ^
TabError: inconsistent use of tabs and spaces in indentation

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 11:38:29) 
-- CODE:
from  math import*
from numpy import*
x = array(eval(input("Valores: ")))
n = size(x)    
m = sum(x/n)
s = 0
for i in range(n):
    s =  s + (x[i] - m)**2
	d = ((s / (n-1))**0.5)
print(round(d,3))
-- EXECUTION TIME:
0.877747
-- ERROR:
  File "/home/codebench/codes/1798/2569/main.py", line 9
    d = ((s / (n-1))**0.5)
                         ^
TabError: inconsistent use of tabs and spaces in indentation

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 11:39:45) 
-- CODE:
from  math import*
from numpy import*
x = array(eval(input("Valores: ")))
n = size(x)    
m = sum(x/n)
s = 0
for i in range(n):
    s =  s + (x[i] - m)**2
	d = ((s / (n-1))**0.5)
print(round(d,3))
-- ERROR:
File "XXXX", line 9
    d = ((s / (n-1))**0.5)
                         ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 11:40:07) 
-- CODE:
from  math import*
from numpy import*
x = array(eval(input("Valores: ")))
n = size(x)    
m = sum(x/n)
s = 0
for i in range(n):
    s =  s + (x[i] - m)**2
d = ((s / (n-1))**0.5)
print(round(d,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 11:40:15) 
-- CODE:
from  math import*
from numpy import*
x = array(eval(input("Valores: ")))
n = size(x)    
m = sum(x/n)
s = 0
for i in range(n):
    s =  s + (x[i] - m)**2
d = ((s / (n-1))**0.5)
print(round(d,3))
-- EXECUTION TIME:
1.18234
-- TEST CASE 1:
---- input:
[-4,250,-1,30,12]
---- correct output:
108.498
---- user output:
108.498
-- TEST CASE 2:
---- input:
[12.5,25.2,50.39,47.3,0.9]
---- correct output:
21.526
---- user output:
21.526
-- TEST CASE 3:
---- input:
[1.5,1.9,1.2,1.3,1.4,1.1,1.75]

---- correct output:
0.29
---- user output:
0.29
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
